--- a/vue-app/src/index.html
+++ b/vue-app/src/index.html
@@ -1,29 +1,343 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Test</title>
-        <style>
-            [v-cloak] {
-                display: none;
-            }
-        </style>
 
-    </head>
-    <body>
-        <div id="app">
-            <header style="background-color: black; height: 20px">
-            </header>
+<head>
+    <meta charset="UTF-8">
+    <title>ADF Inspector</title>
+    <style>
+        [v-cloak] {
+            display: none;
+        }
+    </style>
+    <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/57cfb30a19.js" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+    <header>
+        <div class="headerIcon">ADF</div> <b>Advanced Demand Forecast</b> <img id="headerImg"
+            src="https://www.plattform-i40.de/IP/Redaktion/DE/Anwendungsbeispiele/042-augmented-reality/logo-basf.png?__blob=normal&v=1&size=420w">
+
+    </header>
+    <div id="mainSection">
+        <div id="mainMenu">
+            <div id="menuBar">
+                <ul>
+                    <li><a href="#infoprovider"><i class="fas fa-th-list"></i>Infoprovider</a></li>
+                    <li><a href="#summary"><i class="fas fa-table"></i>Summary</a></li>
+                    <li><a href="#forecast"><i class="fas fa-chart-line"></i>Forecast</a></li>
+                    <li><a href="#statistics"><i class="fas fa-chart-bar"></i>Statistics</a></li>
+                    <li><a href="#articleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
+                    <li style="float:right; "><a href="#settings" style="margin-top:-8px"><span
+                                style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span></a>
+                    </li>
+                </ul>
+                <hr id="menuBarLine">
+            </div>
+
+
         </div>
+        <div id="mainInformation">
+            <select name="BU" id="BU">
+                <option value="BU1">Z7091A01</option>
+                <option value="BU2">Bussines Unit 2</option>
+                <option value="BU3">Bussines Unit 3</option>
+                <option value="BU4">Bussines Unit 4</option>
+            </select>
+            <div id="month">June 2021</div>
+            <div id="filterbox">
+                <div class="filter">
+                    Level <button class="splitButton"><i class="fas fa-sitemap"></i>
+                        <p class="grayButton">Article</p>
+                    </button>
+                </div>
+                <div class="filter">
+                    Filter <button class="splitButton"><i class="fas fa-filter"></i>
+                        <p class="grayButton">OFF</p>
+                    </button>
+                </div>
+                <select class="selectGray" name="filterSettings" id="filterSet">
+                    <option value="FS1">Filter Settings</option>
+                    <option value="FS2">Filter Settings 2</option>
+                    <option value="FS3">Filter Settings 3</option>
+                    <option value="FS4">Filter Settings 4</option>
+                </select>
+            </div>
+        </div>
+        <hr>
+        <div id="mainGraphs">
+            <div id="summaryTableHeader">
+                Infoprovider Summary
+                <div id="filterbox">
+                    <div class="filter">
+                        Adjustments <button class="splitButton"><i class="fas fa-wrench"></i>
+                            <p class="grayButton">OFF</p>
+                        </button>
+                    </div>
+                    <select class="selectGray" name="downloads" id="downloads">
+                        <option value="FS1">Downloads</option>
+                        <option value="FS2">Downloads 2</option>
+                        <option value="FS3">Downloads 3</option>
+                        <option value="FS4">Downloads 4</option>
+                    </select>
+                </div>
+            </div>
+            <table>
+                <tr>
+                    <th>GrArticle</th>
+                    <th>Locking Period</th>
+                    <th>Article Text</th>
+                    <th>SBU</th>
+                    <th>Country</th>
+                    <th>Alphacode</th>
+                    <th>Segmentation</th>
+                    <th>TS Class</th>
+                    <th>Seasonal</th>
+                    <th>ABC</th>
+                    <th>Warning</th>
+                    <th>STFC Level</th>
+                    <th>STFC Method</th>
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
 
-        <script src="https://unpkg.com/vue@next"></script>
-        <script>
-            let app = Vue.createApp({
-                data() {
-                    return {
-                    }
-                }
-            })
-            app.mount('#app')
-        </script>
-    </body>
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+                <tr>
+                    <td>500062</td>
+                    <td>0</td>
+                    <td>PHENOXYPROPANOL</td>
+                    <td>EMU</td>
+                    <td>Mixed</td>
+                    <td>NBP</td>
+                    <td>NS</td>
+                    <td>Smooth</td>
+                    <td>No</td>
+                    <td>B</td>
+                    <td></td>
+                    <td>GrArticle</td>
+                    <td>MA 3</td>
+
+                </tr>
+
+
+            </table>
+
+        </div>
+    </div>
+    <footer>
+        <div style="float:left">Showing 1 to 25 of 2666 entries</div>
+        <div style="float:right; margin-right: 20px">Page 1 of 107</div>
+        <div style="float:right; margin-right: 20px">Articles per Page: 25</div>
+
+    </footer>
+
+    <script src="https://unpkg.com/vue@next"></script>
+    <script src="app.js"></script>
+</body>
+
 </html>
