--- a/vue-app/src/summary CUI.html
+++ b/vue-app/src/summary CUI.html
@@ -23,12 +23,19 @@
             <div class="menuBar">
                 <ul>
                     <li><a href="#infoprovider"><i class="fas fa-th-list"></i>Infoprovider</a></li>
-                    <li><a href="#summary"><i class="fas fa-table"></i>Summary</a></li>
+                    <li><a href="#summary" class="selected"><i class="fas fa-table"></i>Summary</a></li>
                     <li><a href="#forecast"><i class="fas fa-chart-line"></i>Forecast</a></li>
                     <li><a href="#statistics"><i class="fas fa-chart-bar"></i>Statistics</a></li>
                     <li><a href="#articleForecast"><i class="fas fa-chart-line"></i>Article Forecast</a></li>
-                    <li style="float:right; "><a href="#settings" style="margin-top:-8px"><span
-                                style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span></a>
+                    <!--<li style="float:right; ">
+                        <a href="#settings" style="margin-top:-8px">
+                            <span style="font-size: 24px; color:rgb(122, 122, 122)"><i class="fas fa-cog"></i></span>
+                        </a>
+                    </li>-->
+                    <li style="float:right; ">
+                        <a href="#settings" style="margin-top:-8px">
+                            <span style="font-size: 24px; color: #99D3ED "><i class="fas fa-info-circle"></i></span>
+                        </a>
                     </li>
                 </ul>
                 <hr id="menuBarLine">
@@ -80,7 +87,7 @@
                 </div>
             </div>
             <table>
-                <tr>
+                <tr onclick="showFC()">
                     <th>GrArticle</th>
                     <th>Locking Period</th>
                     <th>Article Text</th>
@@ -95,7 +102,7 @@
                     <th>STFC Level</th>
                     <th>STFC Method</th>
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -111,7 +118,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -127,7 +134,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -143,7 +150,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -159,7 +166,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -175,7 +182,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -191,7 +198,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -207,7 +214,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -223,7 +230,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -239,7 +246,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -255,7 +262,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -271,7 +278,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -287,7 +294,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -303,7 +310,7 @@
                     <td>MA 3</td>
 
                 </tr>
-                <tr>
+                <tr onclick="showFC()">
                     <td>500062</td>
                     <td>0</td>
                     <td>PHENOXYPROPANOL</td>
@@ -340,7 +347,10 @@
     <script src="app.js"></script>
     <script>
     function hideChat() {
-        window.location.replace("index.html");
+        window.location.replace("summary.html");
+        }
+    function showFC() {
+        window.location.replace("Article_Forecast CUI.html");
     }
     </script>
 </body>
