--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>ADF Inspector</title>
+  <title>Inspector Tool Inspector</title>
   <script src="https://kit.fontawesome.com/57cfb30a19.js" crossorigin="anonymous"></script>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
